@@ -11,6 +11,7 @@ Version 0.3.7
 - Various documentation tweaks (README and man page source)
 - Change default hash function for packet id generation to crc64 and added 
   -H option to select hash function (crc32 and crc64)
+- Added autotuning of delta_t_max based on actual observed clock offset
 
 Version 0.3.6
 - Fixed bug that caused SPP to fail on FreeBSD 10.1
